--- a/app/src/main/res/layout/layout_stock_spec_select.xml
+++ b/app/src/main/res/layout/layout_stock_spec_select.xml
@@ -25,11 +25,12 @@
                 android:layout_margin="10dp"/>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@id/imgViProduct"
                 android:orientation="vertical"
-                android:layout_centerVertical="true">
+                android:layout_centerVertical="true"
+                android:layout_marginRight="6dp">
 
                 <TextView
                     android:id="@+id/txtName"
@@ -40,9 +41,13 @@
                     android:textSize="15sp"/>
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:id="@+id/txtSpecDesc"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="6dp"
+                    android:maxLines="3"
+                    android:ellipsize="end"
+                    android:lineSpacingExtra="3dp"
                     android:text="请选择规格"
                     android:textColor="@color/orange_color"
                     android:textSize="13sp"/>
@@ -77,7 +82,10 @@
             android:id="@+id/gridSpec"
             android:layout_width="match_parent"
             android:layout_height="120dp"
-            android:padding="10dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
             android:numColumns="2"
             android:horizontalSpacing="40dp"
             android:verticalSpacing="10dp" >
