--- a/app/src/main/res/layout/item_lv_stock_spec.xml
+++ b/app/src/main/res/layout/item_lv_stock_spec.xml
@@ -1,31 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
 
         <TextView
-            android:id="@+id/txtName"
+            android:id="@+id/tv_gg"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1.5"
+            android:text="规格"
             android:textColor="@color/text_gray_color"
-            android:textSize="13sp"
-            android:text="丝径"/>
+            android:textSize="13sp" />
 
-        <com.appjumper.silkscreen.view.MyListView
-            android:id="@+id/lvImage"
+        <TextView
+            android:id="@+id/tv_vul"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-            android:layout_marginLeft="10dp"/>
-
+            android:layout_marginLeft="10dp"
+            android:text="规格"
+            android:textColor="@color/theme_color"
+            android:textSize="13sp" />
     </LinearLayout>
 
 
