--- a/app/src/main/res/layout/activity_productivity_authentication.xml
+++ b/app/src/main/res/layout/activity_productivity_authentication.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:background="@color/view_background_gray_color"
     android:layout_height="match_parent">
     <include layout="@layout/layout_header_with_text"
         android:id="@+id/include" />
@@ -10,9 +11,31 @@
         android:id="@+id/web_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:layout_below="@+id/include"
         android:layout_marginBottom="46dp"
         android:layout_alignParentStart="true" />
+
+    <TextView
+        android:id="@+id/txtTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/include"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:textSize="18sp"
+        android:text="生产力认证"
+        android:textColor="@color/text_gray_color"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/txtTitle"
+        android:padding="12dp"
+        android:lineSpacingExtra="6dp"
+        android:text="    生产力认证，是丝网+推出的确保平台信息真实性的一种方式，如果企业申请生产力认证，我们会派专人到企业实地考察，确保企业所提交的信息是真实的，才会提供生产力认证。"
+        android:textSize="15sp"
+        android:textColor="@color/text_gray_color"/>
 
     <TextView
         android:id="@+id/tv_consult"
