--- a/app/src/main/res/layout/activity_view_order_stock.xml
+++ b/app/src/main/res/layout/activity_view_order_stock.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ptr="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/view_background_gray_color"
@@ -39,36 +38,31 @@
                 android:textColor="@color/while_color"
                 android:textSize="18sp" />
 
-            <TextView
-                android:visibility="gone"
-                android:id="@+id/tv_right"
+            <ImageView
+                android:id="@+id/iv_share"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
+                android:visibility="gone"
                 android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
                 android:padding="12dp"
-                android:textColor="@color/while_color"
-                android:text="编辑"
-                android:textSize="16sp" />
+                android:src="@mipmap/icon_share" />
 
         </RelativeLayout>
     </LinearLayout>
 
-    <com.appjumper.silkscreen.view.scrollView.PullToRefreshScrollView
+    <com.appjumper.silkscreen.view.scrollView.PullToRefreshScrollView xmlns:ptr="http://schemas.android.com/apk/res-auto"
         android:id="@+id/pull_refresh_scrollview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/rl_title"
-        android:layout_marginBottom="46dp"
+        android:layout_above="@id/tv_delete"
         ptr:ptrAnimationStyle="flip"
         ptr:ptrMode="pullFromStart">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:focusableInTouchMode="true"
-            android:focusable="true"
-            android:descendantFocusability="beforeDescendants"
             android:background="@color/while_color"
             android:orientation="vertical">
 
@@ -76,16 +70,25 @@
                 android:id="@+id/fragment_cycle_viewpager_content"
                 android:name="com.appjumper.silkscreen.view.banner.CycleView2Pager"
                 android:layout_width="match_parent"
-                android:layout_height="280dip" />
+                android:layout_height="220dip" />
 
             <com.appjumper.silkscreen.view.MyListView
-                android:id="@+id/listview"
+                android:id="@+id/list_view"
                 android:layout_width="match_parent"
-                android:divider="@null"
-                android:dividerHeight="0dp"
-                android:layout_height="wrap_content">
-
+                android:layout_height="wrap_content"
+                android:divider="@color/while_color"
+                android:dividerHeight="0dp">
             </com.appjumper.silkscreen.view.MyListView>
+
+
+            <LinearLayout
+                android:id="@+id/lLaytSpec"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@color/while_color">
+
+            </LinearLayout>
 
 
             <LinearLayout
@@ -112,18 +115,17 @@
 
             <View
                 style="@style/LineStyle"
-                android:layout_marginLeft="22dp" />
+                android:layout_marginLeft="12dp" />
 
             <TextView
                 android:id="@+id/tv_remark"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:lineSpacingExtra="3dp"
-                android:paddingTop="12dp"
-                android:paddingBottom="12dp"
-                android:layout_marginLeft="24dp"
+                android:padding="12dp"
+                android:text="这里是备注信息这里是备注信息这里是备注信息"
                 android:textColor="@color/black_color"
-                android:textSize="13sp" />
+                android:textSize="14sp" />
 
             <View style="@style/LineStyle" />
 
@@ -131,6 +133,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="12dp"
                 android:background="@color/view_background_gray_color" />
+
         </LinearLayout>
 
     </com.appjumper.silkscreen.view.scrollView.PullToRefreshScrollView>
