--- a/app/src/main/res/layout/item_lv_price_child.xml
+++ b/app/src/main/res/layout/item_lv_price_child.xml
@@ -43,7 +43,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="12dp"
-        android:paddingRight="36dp">
+        android:paddingRight="30dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -74,7 +74,7 @@
                     android:layout_height="wrap_content"
                     android:text="255元/吨"
                     android:textSize="13sp"
-                    android:textColor="@color/text_gray_color"/>
+                    android:textColor="@color/orange_color"/>
 
             </LinearLayout>
 
@@ -102,7 +102,7 @@
                     android:layout_height="wrap_content"
                     android:text="255元/吨"
                     android:textSize="13sp"
-                    android:textColor="@color/text_gray_color"/>
+                    android:textColor="@color/orange_color"/>
 
             </LinearLayout>
 
