--- a/app/src/main/res/layout/layout_processing_listview.xml
+++ b/app/src/main/res/layout/layout_processing_listview.xml
@@ -7,6 +7,8 @@
     <com.appjumper.silkscreen.view.pulltorefresh.PullToRefreshPagedListView
         android:id="@+id/listview"
         style="@style/ListViewDividerStyle"
-        android:dividerHeight="0dp"></com.appjumper.silkscreen.view.pulltorefresh.PullToRefreshPagedListView>
+        android:dividerHeight="0dp">
+
+    </com.appjumper.silkscreen.view.pulltorefresh.PullToRefreshPagedListView>
 
 </LinearLayout>
