--- a/app/src/main/res/layout/item_lv_enterprise_list.xml
+++ b/app/src/main/res/layout/item_lv_enterprise_list.xml
@@ -11,6 +11,7 @@
         android:layout_height="51dp"
         android:layout_marginLeft="12dp"
         android:layout_marginTop="12dp"
+        android:scaleType="centerCrop"
         android:src="@mipmap/ic_launcher" />
 
     <LinearLayout
