--- a/app/src/main/res/layout/item_recycler_line_article.xml
+++ b/app/src/main/res/layout/item_recycler_line_article.xml
@@ -1,19 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingLeft="5dp"
     android:paddingRight="12dp"
     android:paddingTop="3dp"
     android:paddingBottom="3dp"
-    android:background="@drawable/select_white_background"
-    android:gravity="center_vertical"
-    android:orientation="horizontal">
+    android:background="@drawable/select_white_background">
+
+
+    <TextView
+        android:id="@+id/txtDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:text="12-27"
+        android:textSize="12sp"
+        android:textColor="@color/text_black_color"/>
 
 
     <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_toLeftOf="@id/txtDate"
+        android:layout_centerVertical="true">
 
         <View
             android:id="@+id/unRead"
@@ -24,7 +35,7 @@
 
         <TextView
             android:id="@+id/txtTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="15dp"
             android:text="由于近日连续大雾，价格预计上浮"
@@ -34,22 +45,8 @@
             android:textColor="@color/theme_color"
             android:textSize="13sp"/>
 
-
     </RelativeLayout>
 
 
 
-    <View
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
-
-    <TextView
-        android:id="@+id/txtDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="12-27"
-        android:textSize="12sp"
-        android:textColor="@color/text_black_color"/>
-
-</LinearLayout>
+</RelativeLayout>
