--- a/app/src/main/res/layout/item_recycler_line_hot_inquiry.xml
+++ b/app/src/main/res/layout/item_recycler_line_hot_inquiry.xml
@@ -33,7 +33,7 @@
         android:maxLines="1"
         android:ellipsize="end"
         android:layout_marginTop="6dp"
-        android:text="今日报价1300次"
+        android:text="报价1300次"
         android:textSize="12sp"
         android:textColor="@color/text_black_color"/>
 
