--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -102,6 +102,7 @@
             android:id="@+id/textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:layout_marginLeft="26dp"
             android:textColor="@color/gray_color"
             android:textSize="11sp"
@@ -114,8 +115,8 @@
             android:layout_width="match_parent"
             android:layout_height="38dp"
             android:background="@drawable/selector_login_btn"
-            android:layout_marginLeft="41dp"
-            android:layout_marginRight="41dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
             android:layout_marginTop="40dp"
             android:text="登录"
             android:textSize="15sp"
