--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -136,29 +136,55 @@
             android:layout_marginLeft="12dp"
             android:layout_marginTop="12dp"
             />
-        <TextView
-            android:id="@+id/textview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="26dp"
-            android:textColor="@color/gray_color"
-            android:textSize="11sp"
-            android:layout_marginTop="12dp"
-            android:text="点击登录，即代表您同意遵守丝网+的《用户协议》"
-            />
+
         <Button
             android:id="@+id/btn_register"
             android:layout_below="@id/textview"
             android:layout_width="match_parent"
             android:layout_height="38dp"
             android:background="@drawable/selector_login_btn"
-            android:layout_marginLeft="41dp"
-            android:layout_marginRight="41dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
             android:layout_marginTop="40dp"
             android:text="注册"
             android:textSize="15sp"
             android:textColor="@color/while_color"
             />
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
+
+            <CheckBox
+                android:id="@+id/chkDeal"
+                android:layout_width="13dp"
+                android:layout_height="13dp"
+                android:layout_marginLeft="15dp"
+                android:button="@null"
+                android:checked="true"
+                android:background="@drawable/selector_checkbox_green_rect"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="6dp"
+                android:text="我已阅读并且同意"
+                android:textColor="@color/gray_color"
+                android:textSize="11sp"/>
+
+            <TextView
+                android:id="@+id/txtDeal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="《丝网+用户协议》"
+                android:textColor="@color/theme_color"
+                android:textSize="11sp"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 </RelativeLayout>
