--- a/app/src/main/res/layout/activity_add_service_complete.xml
+++ b/app/src/main/res/layout/activity_add_service_complete.xml
@@ -15,14 +15,28 @@
         android:src="@mipmap/complete"/>
 
     <TextView
+        android:id="@+id/txtTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        android:text="发布成功"
+        android:textSize="16sp"
+        android:textColor="@color/theme_color"/>
+
+    <TextView
         android:id="@+id/txtMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
-        android:text="服务添加完成"
-        android:textSize="16sp"
-        android:textColor="@color/text_black_color"/>
+        android:paddingLeft="50dp"
+        android:paddingRight="50dp"
+        android:gravity="center"
+        android:lineSpacingExtra="2dp"
+        android:text="该信息已发布在 首页-产品供应信息，请在个人中心管理您发布的信息"
+        android:textSize="13sp"
+        android:textColor="@color/text_gray_color"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,7 +46,7 @@
         android:layout_marginTop="30dp">
         
         <TextView
-            android:id="@+id/txtConfirm"
+            android:id="@+id/txtAdd"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -42,10 +56,10 @@
             android:gravity="center"
             android:textColor="@color/text_black_color"
             android:textSize="14sp"
-            android:text="完成"/>
+            android:text="再发一条"/>
 
         <TextView
-            android:id="@+id/txtAdd"
+            android:id="@+id/txtManage"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -56,7 +70,7 @@
             android:gravity="center"
             android:textColor="@color/while_color"
             android:textSize="14sp"
-            android:text="继续添加"/>
+            android:text="管理信息"/>
     </LinearLayout>
 
 </LinearLayout>
