--- a/app/src/main/res/layout/dialog_sure.xml
+++ b/app/src/main/res/layout/dialog_sure.xml
@@ -13,6 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:paddingTop="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:text="取消关注？"
         android:textColor="@color/black_color"
         android:textSize="14sp"
