--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -63,7 +63,7 @@
                     android:id="@+id/tv_avg"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="258/吨"
+                    android:text=""
                     android:textColor="@color/orange_color"
                     android:textSize="12sp" />
 
@@ -79,8 +79,8 @@
                     android:id="@+id/tv_avg_diff"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="-25"
-                    android:textColor="@color/green_color"
+                    android:text="0"
+                    android:textColor="@color/red_color"
                     android:textSize="12sp" />
             </LinearLayout>
 
@@ -92,6 +92,7 @@
                 android:layout_height="wrap_content"
                 android:paddingTop="5dp"
                 android:paddingBottom="5dp"
+                android:nestedScrollingEnabled="false"
                 android:visibility="gone">
 
             </android.support.v7.widget.RecyclerView>
