--- a/app/src/main/res/layout/activity_enterprise_authentication.xml
+++ b/app/src/main/res/layout/activity_enterprise_authentication.xml
@@ -105,6 +105,7 @@
                         android:layout_height="100dp"
                         android:layout_marginLeft="12dp"
                         android:layout_weight="1"
+                        android:scaleType="centerInside"
                         android:src="@mipmap/icon_uploading_01" />
                 </LinearLayout>
 
@@ -126,6 +127,7 @@
                         android:layout_height="100dp"
                         android:layout_marginLeft="12dp"
                         android:layout_weight="1"
+                        android:scaleType="centerInside"
                         android:src="@mipmap/icon_uploading_02" />
                 </LinearLayout>
 
@@ -207,6 +209,7 @@
                     android:layout_height="100dp"
                     android:layout_marginLeft="12dp"
                     android:layout_weight="1"
+                    android:scaleType="centerInside"
                     android:src="@mipmap/icon_uploading_03" />
             </LinearLayout>
 
