--- a/app/src/main/res/layout/layout_my_point_header.xml
+++ b/app/src/main/res/layout/layout_my_point_header.xml
@@ -62,6 +62,7 @@
             android:padding="12dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="invisible"
             android:gravity="center_horizontal"
             android:text="(签到获取10—50积分)"
             android:textColor="@color/text_gray_color"
