--- a/app/src/main/res/layout/activity_my_release.xml
+++ b/app/src/main/res/layout/activity_my_release.xml
@@ -32,7 +32,7 @@
                     android:paddingRight="12dp"
                     android:paddingTop="10dp"
                     android:paddingBottom="5dp"
-                    android:text="刷新能让您的信息顺序更靠前！(每次刷新扣除10积分)"
+                    android:text="刷新能让您的信息顺序更靠前！"
                     android:textSize="13sp"
                     android:textColor="@color/text_gray_light_color"/>
 
