--- a/app/src/main/res/layout/dialog_sure.xml
+++ b/app/src/main/res/layout/dialog_sure.xml
@@ -8,6 +8,18 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/txtTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:textStyle="bold"
+        android:text="提示"
+        android:textColor="@color/black_color"
+        android:textSize="16sp"
+        android:visibility="visible" />
+
+    <TextView
         android:id="@+id/message_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -15,10 +27,11 @@
         android:paddingTop="10dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
+        android:gravity="center_horizontal"
+        android:lineSpacingExtra="3dp"
         android:text="取消关注？"
-        android:textColor="@color/black_color"
-        android:textSize="14sp"
-        android:textStyle="bold" />
+        android:textColor="@color/text_black_color"
+        android:textSize="14sp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
