--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -302,16 +302,25 @@
                 android:id="@+id/rl_my_release"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingTop="12dp"
+                android:paddingBottom="12dp"
                 android:background="@drawable/select_white_background"
                 android:visibility="visible">
+
+                <ImageView
+                    android:id="@+id/imgViMyRelease"
+                    android:layout_width="23dp"
+                    android:layout_height="23dp"
+                    android:layout_marginLeft="14dp"
+                    android:layout_centerVertical="true"
+                    android:src="@mipmap/my_release"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="12dp"
-                    android:drawableLeft="@mipmap/my_release"
-                    android:drawablePadding="12dp"
-                    android:gravity="center_vertical"
+                    android:layout_toRightOf="@id/imgViMyRelease"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="13dp"
                     android:text="我的发布"
                     android:textColor="@color/black_color"
                     android:textSize="14sp" />
