--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -69,8 +69,7 @@
 
     <com.appjumper.silkscreen.view.pulltorefresh.PullToRefreshPagedListView
         android:id="@+id/listview"
-        style="@style/ListViewDividerStyle"
-        android:layout_marginBottom="-30dp">
+        style="@style/ListViewDividerStyle">
     </com.appjumper.silkscreen.view.pulltorefresh.PullToRefreshPagedListView>
 
 
