--- a/app/src/main/res/layout/activity_article_detail.xml
+++ b/app/src/main/res/layout/activity_article_detail.xml
@@ -60,12 +60,12 @@
 
 
 
-    <android.support.v4.view.ViewPager
+    <com.appjumper.silkscreen.view.NoScrollViewPager
         android:id="@+id/pagerArticle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/llBottomBar">
 
-    </android.support.v4.view.ViewPager>
+    </com.appjumper.silkscreen.view.NoScrollViewPager>
 
 </RelativeLayout>
