--- a/app/src/main/res/layout/activity_validation_mobile.xml
+++ b/app/src/main/res/layout/activity_validation_mobile.xml
@@ -122,6 +122,7 @@
             android:id="@+id/textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:layout_marginLeft="26dp"
             android:textColor="@color/gray_color"
             android:textSize="11sp"
@@ -134,8 +135,8 @@
             android:layout_width="match_parent"
             android:layout_height="38dp"
             android:background="@drawable/selector_login_btn"
-            android:layout_marginLeft="41dp"
-            android:layout_marginRight="41dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:layout_marginTop="40dp"
             android:text="下一步"
             android:textSize="15sp"
