--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -86,7 +86,7 @@
 
             <View style="@style/LineStyle" />
 
-            <android.support.v7.widget.RecyclerView
+            <com.appjumper.silkscreen.view.NoScrollRecyclerView
                 android:id="@+id/recyclerArticle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -95,7 +95,7 @@
                 android:nestedScrollingEnabled="false"
                 android:visibility="gone">
 
-            </android.support.v7.widget.RecyclerView>
+            </com.appjumper.silkscreen.view.NoScrollRecyclerView>
 
             <View style="@style/LineStyle" />
 
