--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -334,9 +334,47 @@
 
             </RelativeLayout>
 
+            <View style="@style/LineStyle" android:layout_marginLeft="12dp"/>
+
+
+
+            <RelativeLayout
+                android:id="@+id/rlMyDeal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="12dp"
+                android:paddingBottom="12dp"
+                android:background="@drawable/select_white_background"
+                android:visibility="visible">
+
+                <ImageView
+                    android:id="@+id/imgViMyDeal"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_centerVertical="true"
+                    android:src="@mipmap/my_deal"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/imgViMyDeal"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="15dp"
+                    android:text="我的询价、报价"
+                    android:textColor="@color/black_color"
+                    android:textSize="14sp" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:src="@mipmap/icon_my_arrows_right" />
+
+            </RelativeLayout>
+
             <View style="@style/LineStyle" />
-
-
 
 
 
