--- a/app/src/main/res/layout/activity_stock_consign.xml
+++ b/app/src/main/res/layout/activity_stock_consign.xml
@@ -227,6 +227,7 @@
                             android:layout_marginLeft="5dp"
                             android:layout_weight="3.5"
                             android:background="@null"
+                            android:inputType="phone"
                             android:maxLines="1"
                             android:singleLine="true"
                             android:hint="请输入联系电话"
